--- a/PythonProject.html
+++ b/PythonProject.html
@@ -6,15 +6,25 @@
 			<link rel="Stylesheet" type="text/css" href="PPStyle.css">
 		</head>
 		<body>
-			<div id="wrapper">
+			<div class="wrapper">
 				<div class="container">
 					<div id="header">
-						<div class="logo"></div>
-						<div class="opbar"></div>
+						<div class="logo">
+							<img src="https://www.python.org/static/img/python-logo.png"height="100%"width:"100%">						</div>
+						<div class="opbar">
+							<p class="classsize">Text Size: <a href="#">Normal</a> | <a href ="#"> Large</a></p>
+							<label class="searchbar" for="search">Search:</label>
+							<input type="text" id="search" name="search">
+							<input type="submit" value="go">
+							
+
+						
+						</div>
 					</div>
 
 					<!-- Top Nav Bar -->
 					<ul class="navbar">
+						<li>About </li>
 						<li>Downloads</li>
 						<li>Documentation</li>
 						<li>Community</li>
@@ -37,26 +47,54 @@
 					</div>
 					<!--End Links Tab-->
 
-					<div id="maincont">
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris rhoncus velit mollis lacus imperdiet, eu consectetur metus vestibulum. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur lobortis vulputate purus, eget pharetra ante auctor a. Aliquam convallis porta ornare. Nullam consectetur leo el</p>
-						<p>Beatutiful is better than uglt; <br>
+					<div class="maincont">
+						<p class="conttext">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris rhoncus velit mollis lacus imperdiet, eu consectetur metus vestibulum. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur lobortis vulputate purus, eget pharetra ante auctor a. Aliquam convallis porta ornare. Nullam consectetur leo el</p>
+						<p class="quote">Beatutiful is better than uglt; <br>
 						Explicit is better than implict; <br>
 						Simple is better than complex; <br>
 						Complex is better than complicated; <br>
 						Readability counts </p>
-						<p>
+						<p class="conttext">
 						The Zen of Python </p>
 					</div>
-
+				</div>
+			</div>
+			</div class="botWrapper">
+				<div class ="botContainer">
 					<div class="bottominfo">
 						<div class="section">
-							<!-- <p class="apphead">Getting Started</p>  -->
+							<p class="apphead">Getting Started</p>  
+							<p class="appinfo">Python can be easy to pick up whether you're a first time programmer or you're experienced with other languages. The following pages are a useful first step to get on your way writing programs with Python!</p>
+							<ul>
+								<li> <span id="spanInfo">Beginner's Guide, Programmers</span></li>
+								<li> <span id="spanInfo">Beginner's Guide, Non Programmers</span></li>
+								<li> <span id="spanInfo">Code sample and snippets for <br> Beginners</span></li>
 						</div>
 
-						<div class="section"></div>
+						<div class="section">
+							<p class="apphead">Applications</p>
+							<p class="appinfo">The <span id="spanInfo">Pyhton Package Index (PyPI)</span> host thousands of third-party modules for Python. Both Python's standard library and the community-contributed modules allow for endless possibilities.</p>
+							<ul>
+								<li><span id="spanInfo">Web and Internet Develpment</span></li>
+								<li><span id="spanInfo">Database Access</span></li>
+								<li><span id="spanInfo">Desktop GUIs</span></li>
+								<li><span id="spanInfo">Network Programming</span></li>
+								<li><span id="spanInfo">Software and Game Development</span></li>
+							</ul>
+						</div>
 					</div>
-
-					<div id="footer"></div>
+				</div>
+			</div>	
+			<div class="wrapper">
+				<div class="container">
+					<div class="footer">
+						<ul>
+							<li class="foot">Help and General Contact</li>
+							<li class="foot">Diversity Initiatives</li>
+							<li class="foot">Submit Website Bugs</li>
+						</ul>
+						<p class="copy">Copyright @2001-2016</p>
+					</div>
 				</div>
 			</div>
 		</body>
